bugfix laden von formel